--- a/views/base.pug
+++ b/views/base.pug
@@ -6,5 +6,6 @@ html
     link(rel='shortcut icon' type='image/png' href='img/favicon.png')
 
   body
-    h1 The Park Camper
+    h1= tour
+    //- h1 The Park Camper
     p This is just some text
