--- a/views/tour.pug
+++ b/views/tour.pug
@@ -3,7 +3,10 @@ include _reviewCard
 
 block append head
   script(src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js')
-  link(href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css' rel='stylesheet')
+  link(
+    href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css',
+    rel='stylesheet'
+  )
 
 mixin overviewBox(label, text, icon)
   .overview-box__detail
@@ -16,7 +19,10 @@ block content
   section.section-header
     .header__hero
       .header__hero-overlay &nbsp;
-      img.header__hero-img(src=`/img/tours/${tour.imageCover}`, alt=`${tour.name}`)
+      img.header__hero-img(
+        src=`/img/tours/${tour.imageCover}`,
+        alt=`${tour.name}`
+      )
 
     .heading-box
       h1.heading-primary
@@ -37,7 +43,7 @@ block content
         .overview-box__group
           h2.heading-secondary.ma-bt-lg Quick facts
 
-          - const date = tour.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'})
+          - const date = tour.startDates[0].toLocaleString("en-us", { month: "long", year: "numeric" });
           +overviewBox('Next date', date, 'calendar')
           +overviewBox('Difficulty', tour.difficulty, 'trending-up')
           +overviewBox('Participants', `${tour.maxGroupSize} people`, 'user')
@@ -48,7 +54,10 @@ block content
 
           each guide in tour.guides
             .overview-box__detail
-              img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.name}`)
+              img.overview-box__img(
+                src=`/img/users/${guide.photo}`,
+                alt=`${guide.name}`
+              )
 
               - if (guide.role === 'lead-guide')
                 span.overview-box__label Lead guide
@@ -58,14 +67,18 @@ block content
 
     .description-box
       h2.heading-secondary.ma-bt-lg= `About ${tour.name} tour`
-      - const parapraphs = tour.description.split('\n');
+      - const parapraphs = tour.description.split("\n");
       each p in parapraphs
         p.description__text= p
 
   section.section-pictures
     each img, i in tour.images
       .picture-box
-        img.picture-box__img(src=`/img/tours/${img}`, alt=`The Park Camper Tour ${i + 1}`, class=`picture-box__img--${i + 1}`)
+        img.picture-box__img(
+          src=`/img/tours/${img}`,
+          alt=`The Park Camper Tour ${i + 1}`,
+          class=`picture-box__img--${i + 1}`
+        )
 
   section.section-map
     #map(data-locations=`${JSON.stringify(tour.locations)}`)
@@ -79,9 +92,21 @@ block content
     .cta
       .cta__img.cta__img--logo
         img(src='/img/logo-white.png', alt='Natours logo')
-      img.cta__img.cta__img--1(src=`/img/tours/${tour.images[1]}`, alt='Tour picture')
-      img.cta__img.cta__img--2(src=`/img/tours/${tour.images[2]}`, alt='Tour picture')
+      img.cta__img.cta__img--1(
+        src=`/img/tours/${tour.images[1]}`,
+        alt='Tour picture'
+      )
+      img.cta__img.cta__img--2(
+        src=`/img/tours/${tour.images[2]}`,
+        alt='Tour picture'
+      )
       .cta__content
         h2.heading-secondary What are you waiting for?
         p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
-        button.btn.btn--green.span-all-rows Book tour now!
+
+        if user
+          button#book-tour.btn.btn--green.span-all-rows(
+            data-tour-id=`${tour.id}`
+          ) Book tour now!
+        else
+          a.btn.btn--green.span-all-rows(href='/login') Login to book tour!
